tests/baselines/reference/overloadOnConstNoAnyImplementation2.errors.txt
tests/cases/compiler/overloadOnConstNoAnyImplementation2.ts(6,5): error TS2394: This overload signature is not compatible with its implementation signature.
tests/cases/compiler/overloadOnConstNoAnyImplementation2.ts(12,18): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
tests/cases/compiler/overloadOnConstNoAnyImplementation2.ts(18,9): error TS2345: Argument of type '(x: 'bye') => number' is not assignable to parameter of type '(x: "hi") => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type '"hi"' is not assignable to type '"bye"'.
tests/cases/compiler/overloadOnConstNoAnyImplementation2.ts(21,9): error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: "hi") => number'.
  Types of parameters 'x' and 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/overloadOnConstNoAnyImplementation2.ts (4 errors) ====
    interface I {
        x1(a: number, callback: (x: 'hi') => number);
    }
    
    class C {
        x1(a: number, callback: (x: 'hi') => number);
        ~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 tests/cases/compiler/overloadOnConstNoAnyImplementation2.ts:7:5: The implementation signature is declared here.
        x1(a: number, callback: (x: string) => number) {
            callback('hi');
            callback('bye');
            var hm = "hm";
            callback(hm);
            callback(1); // error
                     ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
        }
    }
    
    var c: C;
    c.x1(1, (x: 'hi') => { return 1; } );
    c.x1(1, (x: 'bye') => { return 1; } );
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: 'bye') => number' is not assignable to parameter of type '(x: "hi") => number'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type '"hi"' is not assignable to type '"bye"'.
!!! related TS2793 tests/cases/compiler/overloadOnConstNoAnyImplementation2.ts:7:5: The call would have succeeded against this implementation, but implementation signatures of overloads are not externally visible.
    c.x1(1, (x) => { return 1; } );
    
    c.x1(1, (x: number) => { return 1; } );
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: number) => number' is not assignable to parameter of type '(x: "hi") => number'.
!!! error TS2345:   Types of parameters 'x' and 'x' are incompatible.
!!! error TS2345:     Type 'string' is not assignable to type 'number'.